<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Santa Elena en Bus</string>
    <string name="title_map">Map</string>
    <string name="title_chat">Chat</string>
    <string name="title_friends">Friends</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_mainmenu">Santa Elena en Bus</string>
    <string name="home">Home</string>
    <string name="slideshow">Slideshow</string>
    <string name="submit">submit</string>
    <string name="pass">pass</string>
    <string name="estacionamiento_de_la_linea_7">Estacionamiento de la Linea 7</string>
    <string name="title_activity_lineas_buses">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main_activitypr">MainActivitypr</string>
    <string name="title_ayuda">AYUDA</string>
    <string name="made_by">by: Zavier Quinde</string>
    <string name="Ayuda">1ero.- Seleccione o busque su punto destino en el mapa.\n
                        \n2do.- Se le mostrara una lista de lineas de buses que podrian trasladarlo desde su punto origen al destino.\n
                        \n3ro.- Seleccionar un elemento de la lista, percatese bien en las distancias aproximadas.\n
                        \n4to.- Se muestra la ruta seleccionada en el mapa.</string>

    <string name="title_info">INFORMACION </string>


    <string name="info_current_location">Su Posición actual en el Mapa</string>
    <string name="info_esperar_bus">Aquí espere y aborde el bus</string>
    <string name="info_legue_aquí">Llegue hasta Aquí</string>
    <string name="info_paradero_bus">Paradero de buses</string>
    <string name="info_buses_circulando">Bus(es) circulando en la Ruta</string>
    <string name="info_ruta_pie">Ruta a Pie, avance por este camino</string>
    <string name="info_ruta_bus">Ruta deL Bus</string>

    <string name="info_distancias">Distancias aproximadas en metros</string>

    <string name="info_rutas_disponibles">Rutas de Buses \n Disponibles</string>
    <string name="info_ruta_seleccion">Seleccione una Ruta</string>

    <string name="info_distancia_origen_bus">Distancia desde su Ubicación actual \n hasta el punto más cercano \n a la ruta</string>
    <string name="info_distancia_bajadaBus_destino"> Distancia, Bajada del \n bus hacia su Destino</string>

    <string name="infoBusesCirculando">Número de disco\t \t \t \t  \t  \t \t Número de Pasajeros </string>
    <string name="infolineaBus">Linea de Bus </string>

    <string name="infomensajemostar"> No volver a mostar este mensaje </string>

    <string name="info_tocar"> Toque aquí para más opciones </string>
    <string name="info_irA">Ir al Punto</string>
    <string name="info_Abordar">Abordar Bus</string>
    <string name="info_bajada">Dejar el bus</string>
    <string name="info_buses">Ver buses</string>
    <string name="info_destino">Destino</string>

    <string name="info_hibrido">Híbrido</string>
    <string name="info_normal">Normal</string>
    <string name="info_Resarurants">Buscar</string>
    <string name="info_anterior">Información</string>

</resources>
