<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:clipToPadding="true"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/tap_action_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_dns_red_400_24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_tocar"
                android:textColor="@color/grey" />

        </LinearLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/info_irA"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="15dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center"
                            android:layout_margin="10dp"
                            android:background="@drawable/circleshape"
                            android:gravity="center"
                            android:padding="10dp">

                            <ImageView
                                android:id="@+id/fltTomarElBus"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:onClick="onClick"
                                android:src="@drawable/paradadeautobus" />

                        </RelativeLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/info_Abordar"
                            android:textColor="@color/grey" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center"
                            android:layout_margin="10dp"
                            android:background="@drawable/circleshape"
                            android:gravity="center"
                            android:padding="10dp">

                            <ImageView
                                android:id="@+id/fltBajadaDelBus"
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:onClick="onClick"
                                android:src="@drawable/llegadabus" />

                        </RelativeLayout>


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/info_bajada"
                            android:textColor="@color/grey" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center"
                            android:layout_margin="10dp"
                            android:background="@drawable/circleshape"
                            android:gravity="center"
                            android:padding="10dp">

                            <ImageView
                                android:id="@+id/fltDestino"
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:onClick="onClick"
                                android:src="@drawable/meta" />

                        </RelativeLayout>


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/info_destino"
                            android:textColor="@color/grey" />


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">


                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center"
                            android:layout_margin="10dp"
                            android:background="@drawable/circleshape"
                            android:gravity="center"
                            android:padding="10dp">

                            <ImageView
                                android:id="@+id/idVerbus"
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:onClick="onClick"
                                android:src="@drawable/trolebus" />

                        </RelativeLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/info_buses"
                            android:textColor="@color/grey" />

                    </LinearLayout>


                </LinearLayout>


            </LinearLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="Tipo de Mapas"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="15dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center"
                            android:layout_margin="10dp"
                            android:background="@drawable/circleshape"
                            android:gravity="center">

                            <ImageView
                                android:id="@+id/idhibrido"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:onClick="onClick"
                                android:scaleType="fitXY"
                                android:src="@drawable/setlightimg" />

                        </RelativeLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/info_hibrido"
                            android:textColor="@color/grey" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center"
                            android:layout_margin="10dp"
                            android:background="@drawable/circleshape"
                            android:gravity="center">

                            <ImageView
                                android:id="@+id/idnormal"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:onClick="onClick"
                                android:scaleType="fitXY"
                                android:src="@drawable/traficimg" />

                        </RelativeLayout>


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/info_normal"
                            android:textColor="@color/grey" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center"
                            android:layout_margin="10dp"
                            android:background="@drawable/circleshape"
                            android:gravity="center">

                            <ImageView
                                android:id="@+id/flt_restaurant"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:onClick="onClick"
                                android:scaleType="fitXY"
                                android:src="@drawable/restaurant" />

                        </RelativeLayout>


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/info_Resarurants"
                            android:textColor="@color/grey" />


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">


                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center"
                            android:layout_margin="10dp"
                            android:background="@drawable/circleshape"
                            android:gravity="center"
                            android:padding="10dp">

                            <ImageView
                                android:id="@+id/idinfo"
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:onClick="onClick"
                                android:src="@drawable/info" />

                        </RelativeLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/info_anterior"
                            android:textColor="@color/grey" />

                    </LinearLayout>


                </LinearLayout>


            </LinearLayout>

        </android.support.v7.widget.CardView>


    </LinearLayout>


</android.support.v4.widget.NestedScrollView>